# garmin-database

./: .env.example  .gitignore  README.md  build_html.py  garmin.db  garmin_db.py  pyproject.toml
.github/workflows/: update.yml
scripts/: export_tokens.sh
